# bureau-tools

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: img_compress.py  merge_to_pdf.py  pdf_compress.py  pdf_editor.py  pdf_scanify.py
